--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pytube  # Get videos from playlist video
 streamlit
 pydantic==1.10.8 # https://github.com/hwchase17/langchain/issues/7548
 python-dotenv
+sentence-transformers
 
 # Vector DB
 pinecone-client
